# PerpetualCC

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  PR_DESCRIPTION.md  README.md  pyproject.toml  simplified_prd.md
.claude/: settings.local.json
docs/release/: DESKTOP_APP.md  HOMEBREW.md  PUBLISHING.md  README.md  RELEASE.md  SIGNING.md
perpetualcc/: __init__.py  __main__.py  cli.py  cli_output.py  config.py
perpetualcc/brain/: __init__.py  base.py  factory.py  gemini.py  ollama.py  rule_based.py
perpetualcc/claude/: __init__.py  adapter.py  hooks.py  types.py
perpetualcc/core/: __init__.py  checkpoint.py  decision_engine.py  master_agent.py  rate_limit.py  rate_limit_utils.py  risk_classifier.py  session_manager.py  task_queue.py
perpetualcc/human/: __init__.py  cli_prompt.py  escalation.py  notifications.py
perpetualcc/knowledge/: __init__.py  code_graph.py  embeddings.py  indexer.py  rag.py
perpetualcc/memory/: __init__.py  episodic.py  procedural.py  semantic.py  store.py
perpetualcc/ui/: __init__.py
perpetualcc/ui/web/: README.md  __init__.py  analytics.py  app.py  config.py  export_manager.py
perpetualcc/ui/web/static/: style.css
perpetualcc/ui/web/templates/: analytics.html  config.html  index.html
tests/: __init__.py  run_tests.py  test_analytics.py  test_export_manager.py  test_simple.py  test_web_app.py
tests/integration/: __init__.py  test_human_bridge.py
tests/unit/: __init__.py  test_brain_factory.py  test_checkpoint.py  test_cli_commands.py  test_cli_prompt.py  test_code_graph.py  test_config.py  test_decision_engine.py  test_embeddings.py  test_entry_point.py  test_episodic_memory.py  test_escalation.py  test_indexer.py  test_master_agent.py  test_memory_store.py  test_notifications.py  test_procedural_memory.py  test_rag.py  test_rate_limit.py  test_rate_limit_utils.py  test_risk_classifier.py  test_rule_based_brain.py  test_semantic_memory.py  test_session_manager.py  test_task_queue.py
