[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perpetualcc"
version = "0.1.0"
description = "An intelligent master agent that orchestrates Claude Code sessions 24/7"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Chester Lee" },
]
keywords = [
    "claude",
    "claude-code",
    "ai",
    "agent",
    "automation",
    "cli",
    "orchestration",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "anyio>=4.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/chesterlee/perpetualcc"
Documentation = "https://github.com/chesterlee/perpetualcc#readme"
Repository = "https://github.com/chesterlee/perpetualcc"
Issues = "https://github.com/chesterlee/perpetualcc/issues"
Changelog = "https://github.com/chesterlee/perpetualcc/blob/main/CHANGELOG.md"

[project.optional-dependencies]
gemini = ["google-genai>=1.0.0"]
ollama = ["ollama>=0.4.0"]
knowledge = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "networkx>=3.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-language-pack>=0.3.0",
]
memory = [
    "aiosqlite>=0.20.0",
]
faiss = ["faiss-cpu>=1.8.0"]
all = ["perpetualcc[gemini,ollama,knowledge,memory]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]
build = [
    "build>=1.0.0",
    "twine>=5.0.0",
    "pip-audit>=2.7.0",
    "homebrew-pypi-poet>=0.10.0",
]
desktop = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
pcc = "perpetualcc.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["perpetualcc"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
